# mutable

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: python-publish.yaml
src/mutable/: __init__.py  __main__.py  cli.py  registry.py  tokenizer.py  train.py  utils.py
src/mutable/config/: __init__.py  flow_config.py  from_hydra.py  mutable_config.py
src/mutable/configs/: config.yaml
src/mutable/datasets/: __init__.py  denoising_dataset.py  flow_dataset.py
src/mutable/eval/: __init__.py  base.py  evaluator.py  masking.py  region_config.py  regions.py  registry.py  structure_parser.py
src/mutable/flow/: __init__.py  ode.py  ot_cfm.py  scheduling.py
src/mutable/masking/: __init__.py  masking.py
src/mutable/models/: __init__.py  base.py  bottleneck.py  decoder.py  encoder.py  flow_matching.py  mutable.py  mutable_denoising.py
src/mutable/modules/: __init__.py  activation.py  attention.py  embedding.py  ffn.py  layers.py  noise.py
src/mutable/outputs/: __init__.py  base_outputs.py  mutable_outputs.py
src/mutable/trainer/: __init__.py  denoising_trainer.py  flow_trainer.py
tests/: README.md  conftest.py
tests/e2e/: test_training_smoke.py
tests/integration/: test_dataset_pipeline.py  test_model_pipeline.py  test_trainer.py
tests/integration/eval/: test_evaluator.py
tests/unit/: test_tokenizer.py
tests/unit/config/: test_flow_config.py  test_from_hydra.py  test_mutable_config.py
tests/unit/datasets/: test_denoising_dataset.py  test_flow_dataset.py
tests/unit/eval/: test_base.py  test_classification.py  test_contact.py  (+7 more)
(+38 files in other folders)
