[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mutable-lm"
version = "0.0.1"
description = "Mutable language models"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Bryan Briney" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "torch",
    "transformers>=4.50.0",
    "accelerate",
    "datasets",
    "tokenizers",
    "numpy",
    "pandas",
    "evaluate",
    "tqdm",
    "scipy",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "click>=8.0",
]

[project.optional-dependencies]
adaptive = ["torchdiffeq"]

[project.scripts]
mutable = "mutable.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mutable"]
